패키징 마무리

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/PrototypeMap.PrototypeMap
+GameDefaultMap=/Game/Maps/RDStart/GameStart.GameStart
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/ProjectRD/Blueprints/BP_RevivalDungeonGameMode.BP_RevivalDungeonGameMode_C
 GlobalDefaultServerGameMode=None
@@ -154,4 +154,7 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=True
 
